@@ -3,6 +3,7 @@ todoyu core changelog
 core 2.1.4 - not released yet
 	* Bugfix: Hovering multiple quick-info elements subsequently in direct sequence did only show the first info, no following ones
 	* Bugfix: RTE auto focus failed. Added workaround to focus RTE if first field
+	* Bugfix: Area was not set on popup ajax requests
 	* Changed: Only focus RTE when loaded over ajax
 	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
 	* Changed: TodoyuString::html2text text handling improved
@@ -14,6 +15,7 @@ core 2.1.4 - not released yet
     * Added: Log hook calls
     * Added: Log level LEVEL_CORE which is even deeper than debug and shows internal logs of todoyu core (hooks, connections, etc)
     * Added: Limit parameter for TodoyuDateRange methods
+    * Added: Basic getters for TodoyuRole
 
 core 2.1.3 - 2011-11-17
 	* Bugfix: System URL was set wrong on windows systems
